Applying correction to exercise 1